--- a/package.json
+++ b/package.json
@@ -27,17 +27,15 @@
     "react": "16.13.1",
     "react-bootstrap-switch": "15.5.3",
     "react-chartjs-2": "2.9.0",
-    "react-clock": "^2.4.0",
     "react-datetime": "2.16.3",
     "react-dom": "16.13.1",
-    "react-loadingg": "^1.7.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "set \"CI=false\" && react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
