--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
   },
   "homepage": " ",
   "dependencies": {
+    "@popperjs/core": "^2.4.3",
     "chart.js": "2.9.3",
+    "chokidar": "^3.4.0",
     "classnames": "2.2.6",
+    "core-js": "^3.6.5",
+    "gh-pages": "^3.1.0",
+    "lodash": "^4.17.15",
     "moment": "2.24.0",
     "node-sass": "^4.13.1",
     "nouislider": "14.2.0",
